<resources>
    <string name="app_name">CalorieScope</string>
    <string name="Menu_exit">Exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Home">Home</string>
    <string name="News">News</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Heart_Rate">Heart Rate</string>
    <string name="Hearing_Wellbeing">Hearing Wellbeing</string>
    <string name="Walk"> Walk </string>
    <string name="Rest"> Rest </string>
    <string name="Clear"> Clear </string>
    <string name="numeral_0">0</string>
    <string name="Save">Save</string>
    <string name="Load_Defaults">Load Defaults</string>
    <string name="Clear_App_Data">Clear Data</string>
    <string name="Calculator">"Calculator"</string>
    <string name="title_bmi">BMI</string>
    <string name="title_whr">WHR</string>
    <string name="Step">Step </string>
    <string name="Frequency">Frequency(Hz):</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Next">Next</string>
    <string name="videos">Videos</string>
    <string name="Food">Food</string>
    <string name="Exercise">Exercise</string>
    <string name="Keep_finger_on_HRM_sensor">Keep your finger on the sensor and wait…</string>
    <string name="Keep_finger_on_Camera">Keep your finger on camera and flash light and wait…</string>
    <string name="Tap_on_YES_if_you_hear_the_sound">Tap on YES if you hear the sound</string>
    <string name="developed_by">Developed by Karanvir Singh</string>
    <string name="Github_Link">https://github.com/kvsjxd/CalorieScope</string>

    <string name="Enter_here">Enter here</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Add">Add</string>
    <string name="Minty_Lemon">Minty Lemon</string>
    <string name="Banana_Smoothie">Banana Smoothie</string>
    <string name="Berry_Flusher">Berry Flusher</string>
    <string name="Berry_Lemon_Apple_Cider_Vinegar">Berry Lemon Apple Cider Vinegar</string>
    <string name="Cellulite_Juice">The Cellulite Juice</string>
    <string name="Cucumber_Drink">Cucumber Drink</string>
    <string name="Melon_Detox_Water">Melon Detox Water</string>
    <string name="Green_Tea_Detox">Green Tea Detox</string>
    <string name="Super_Belly_Fat_Cutter">Super Belly Fat Cutter</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Diet_Manager">Diet Manager</string>
    <string name="Diet_Plan">Diet Plan</string>
    <string name="Food_Suggestions">Food Suggestions</string>
    <string name="Fat_Burning_Drinks">Fat Burning Drinks</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Drinks">Drinks</string>
    <string name="Drinks_detail">Drinks detail</string>
    <string name="AddReminder">Add Reminder</string>
    <string name="Reminder">Reminder</string>
    <string name="done">done</string>
    <string name="Cancel">Cancel</string>

    <string-array name="occurrence">
        <item>Once</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="exercise">
        <item>Please Select Exercise </item>
        <item>Crunches</item>
        <item>Chest</item>
        <item>Biceps</item>
        <item>My Plan</item>
    </string-array>

    <string-array name="Workout">
        <item>Select Exercise</item>
        <item>Crunches</item>
        <item>Chest</item>
        <item>Biceps</item>
        <item>Tricep</item>
        <item>Squats</item>
    </string-array>

    <string-array name="Days">
        <item>Select Day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="Zone">
        <item>Select Time</item>
        <item>Morning</item>
        <item>Evening</item>
    </string-array>

    <string name="about_paragraph">We all know the popular saying health is wealth. The loss of health is a loss of all happiness. Nowadays people are busy in daily schedules and find no time to exercise therefore an app called CalorieScope has been introduced which can keep track of the basic exercise which is running and walking. Walking and running are good exercises. We must walk about 8 kilometers every day to remain healthy. While working we move around a lot and therefore this app can count the steps. Walking is the easiest way to burn calories and keep your body in good shape. With this app you can count the calories burnt in real time as you walk or run. Water is essential for good health. One must drink at least 8 glasses of water every day. So, this app also keeps a record of the number of glasses of water consumed throughout the day. It measures the amount of water intake in milliliters also. Caffeine is not good for health but it is a stress buster. People tend to consume a lot of caffeine during work. To cut down on caffeine intake, you can keep a record of the amount of caffeine consumed daily in milligrams and cups. This app updates and aware the people with health issues, the latest research articles by renowned doctors and physicians. You can get access to 30+ articles at a one time. Fresh articles are served every hour.</string>

    <string name="PersonName">Name</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="AddExercise">Add Exercise</string>
    <string name="your_bmi_is">Your Body Mass index is </string>
    <string name="your_whr_is">Your Waist Hip ratio is </string>
    <string name="your_last_heart_rate_check_was">Your last heart rate check was </string>
    <string name="Workout">Workout</string>
    <string name="enter_title">Enter title</string>
    <string name="application_logo">Application logo</string>
    <string name="today_s_summery">Today\'s Summery</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="check">Check</string>
    <string name="step_counter">Step Counter</string>
    <string name="calories_burnt">Calories Burnt</string>
    <string name="x">X</string>
    <string name="water_glasses">Water glasses: </string>
    <string name="_0_ml">( 0 ml )</string>
    <string name="caffeine_glasses">Caffeine glasses: </string>
    <string name="numeral_1"> 1 </string>
    <string name="of_12"> of 12</string>
    <string name="numeral_2000">2000</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="calculate">Calculate</string>
    <string name="food_item">food item</string>
    <string name="heart_icon">heart icon</string>
    <string name="foot_icon">foot icon</string>
    <string name="calories_icon">calories icon</string>
    <string name="clear_fluids_icon">clear fluids icon</string>
    <string name="add_water_icon">add water icon</string>
    <string name="add_caffeine_icon">add caffeine icon</string>
    <string name="fat_drink_icon">fat drink icon</string>
    <string name="exercise_icon">exercise icon</string>
    <string name="food_suggestions_icon">food suggestions icon</string>
    <string name="diet_plan_icon">diet plan icon</string>
    <string name="vegetables_image">vegetables image</string>
    <string name="minty_lemon_image">minty lemon image</string>
    <string name="banana_smoothie_image">banana smoothie image</string>
    <string name="berry_flusher_image">berry flusher image</string>
    <string name="berry_lemon_apple_cider_vinegar_image">Berry Lemon Apple Cider Vinegar image</string>
    <string name="the_cellulite_juice_image">the cellulite juice image</string>
    <string name="cucumber_drink_image">cucumber drink image</string>
    <string name="melon_detox_water_image">melon detox water image</string>
    <string name="green_tea_detox_image">green tea detox image</string>
    <string name="super_belly_fat_cutter_image">super belly fat cutter image</string>
    <string name="diet_plan_image">diet plan image</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="news_thumbnail">news thumbnail</string>
    <string name="_3rd_party_libraries_used">3rd party libraries used:</string>
    <string name="picasso">* picasso</string>
    <string name="volley">* volley</string>
    <string name="perfecttune">* perfectTune</string>
    <string name="pulseview">* pulseview</string>
    <string name="_3rd_party_adapted_code">3rd party adapted code:</string>
    <string name="step_counter_using_accelerometer">* Step counter using accelerometer</string>
    <string name="heart_rate_detector_using_camera_sensor_and_led">* Heart Rate detector using camera sensor and LED</string>

</resources>