<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_diet_manager_home"
        android:icon="@drawable/ic_diet_manager"
        android:title="@string/Diet_Manager" />

    <item
        android:id="@+id/nav_food_suggestions"
        android:icon="@drawable/ic_food"
        android:title="@string/Food_Suggestions" />

    <item
        android:id="@+id/nav_exercise"
        android:icon="@drawable/ic_exercise"
        android:title="@string/title_activity_exercise" />

    <item
        android:id="@+id/nav_fat_burning_drinks"
        android:icon="@drawable/ic_drinks"
        android:title="@string/Fat_Burning_Drinks" />

</menu>