<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_bg"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.dynamicsoft.caloriescope.activities.SettingsActivity">

    <TextView
        android:id="@+id/SensitivityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone" />

    <SeekBar
        android:id="@+id/SensitivitySeekBar"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:layout_marginTop="5sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/SaveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/Save"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/LoadDefaults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/Load_Defaults"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/ClearAppData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/Clear_App_Data"
        android:textColor="@color/red" />

</LinearLayout>