<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ActivityPlan"
        tools:showIn="@layout/app_bar_diet_manager_diet_plan">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Dx"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/diet_plan_image"
                android:src="@drawable/diet_plan_header" />

            <android.support.v7.widget.CardView
                android:id="@+id/w1"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/Dx"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Monday"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/w2"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/w1"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Tuesday"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/w3"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/w2"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Wednesday"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/w4"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/w3"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Thursday"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/w5"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/w4"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Friday"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/w6"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/w5"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Saturday"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/w7"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/w6"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Sunday"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>