<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/reminders_toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="8sp">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_title"
                android:hint="@string/enter_title"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHint="@color/white"
                tools:targetApi="o" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8sp">

                <Spinner
                    android:id="@+id/occurrence_spinner"
                    android:layout_width="0sp"
                    android:layout_height="40sp"
                    android:layout_weight="1"
                    android:entries="@array/occurrence"
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    android:background="@drawable/shape_oval"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8sp">

                <Button
                    android:id="@+id/date_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="0sp"
                    android:layout_marginTop="8sp"
                    android:background="@drawable/shape_oval"
                    android:onClick="onDateClick" />

                <Button
                    android:id="@+id/time_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date_button"
                    android:layout_gravity="center"
                    android:layout_marginTop="15sp"
                    android:layout_marginBottom="20sp"
                    android:background="@drawable/shape_oval"
                    android:onClick="onTimeClick" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8sp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/shape_oval"
            android:layout_marginStart="20sp"
            android:onClick="onCancelClick"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/done"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/shape_oval"
            android:layout_marginStart="20dp"
            android:onClick="onDoneClick"
            android:text="@string/done" />

    </LinearLayout>

</LinearLayout>